Fix block-margin not aligning properly

--- a/docs/style.css
+++ b/docs/style.css
@@ -6,7 +6,6 @@ main {
     min-height: 100vh;
 }
 
-
 /* Remove border added by code-prettify */
 
 pre {
@@ -32,5 +31,5 @@ nav .github-icon {
 }
 
 .block-margin {
-    margin-bottom: 68px;
+    margin-bottom: 73px;
 }
